# hacknation-6-global-hackathon

./: .gitignore  HANDOFF.md  NOTES.md  README.md  app.yaml  pyproject.toml
app/: index.html  main.py  mock.html  repositories.py
artifacts/: demo-proof.md  ingest-audit.json  model-pilot-summary.json  pilot-summary.json  platform-spike.json  referee-summary.json  vector-index-proof.json  walking-skeleton-proof.json
config/: checks.toml
docs/: architecture.md  dataset-audit.md  demo-runbook.md  learnings.md  pilot-results.md  requirements.md  strategy.md  submission.md  verdict-contract.md  winning-demo-plan.md
scripts/: build_similar_index.py  run-databricks-mcp  run_model_pilot.py  run_pilot.py  smoke_demo.py  verify_platform_spike.py
src/trustdesk/: batch.py  check_presence.py  check_vocabulary.py  evaluation.py  ingest.py  ladder.py  lexicon.py  llm_check.py  marks.py  models.py  referee.py  similar.py  sink.py  skeleton_batch.py
tests/: test_app.py  test_batch.py  test_evaluation.py  test_ingest.py  test_ladder.py  test_llm_check.py  test_marks.py  test_referee.py  test_similar.py
tests/e2e/: test_demo.py  test_skeleton.py
