[project]
name = "trustdesk"
version = "0.1.0"
description = "Facility Trust Desk - claim adjudication over the India 10k facility dataset"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trustdesk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
