[project]
name = "trustdesk"
version = "0.1.0"
description = "Facility Trust Desk - claim adjudication over the India 10k facility dataset"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.81.0",
    "fastapi>=0.115",
    "psycopg[binary,pool]>=3.2",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trustdesk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["UP033"]  # Keep Phase 2A configuration-only; modernize existing source in its owning phase.

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.coverage.run]
branch = true
source = ["trustdesk"]

[tool.coverage.report]
show_missing = true
